@@ -1,3 +1,11 @@
+plugins {
+    id 'org.asciidoctor.jvm.convert' version '3.3.2'
+}
+
+ext {
+    snippetsDir = layout.buildDirectory.dir('generated-snippets').get().asFile
+}
+
 tasks.named('bootRun') {
     jvmArgs = [
         '-XX:MaxRAMPercentage=75.0',
@@ -33,4 +41,28 @@ dependencies {
     testImplementation 'org.testcontainers:mysql'
     testImplementation 'org.testcontainers:kafka'
     testImplementation 'org.springframework.kafka:spring-kafka-test'
+    testImplementation 'au.com.dius.pact.provider:junit5:4.6.14'
+    testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
+}
+
+test {
+    outputs.dir snippetsDir
+    jvmArgs '--add-opens', 'java.base/java.lang=ALL-UNNAMED',
+            '--add-opens', 'java.base/java.util=ALL-UNNAMED'
+    systemProperty 'pact.verifier.publishResults', 'true'
+    systemProperty 'pact.provider.version', project.version
+}
+
+asciidoctor {
+    inputs.dir snippetsDir
+    attributes 'snippets': snippetsDir
+    dependsOn test
+    baseDirFollowsSourceFile()
+}
+
+bootJar {
+    dependsOn asciidoctor
+    from(asciidoctor.outputDir) {
+        into 'static/docs'
+    }
 }
